# opsfleet-retail-company-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: commit-after-every-fix.mdc  documentation-separation.mdc  memory-bank.mdc  memory-task-minor-version-bump.mdc  task-execution-commit-required.mdc  task-folder-workflow.mdc  task-index-workflow.mdc  task-quality-lifecycle.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVALUATION.md  MCP.md  SCHEMA.md  TECHNICAL_EXPLANATION.md  USAGE.md
evals/: cases.yaml  judge_prompt.md
golden_bucket/: average-order-value.md  cancelled-order-rate.md  monthly-revenue.md  new-customers-by-month.md  product-category-revenue.md  recent-daily-revenue.md  revenue-by-department.md  revenue-by-traffic-source.md  top-customers-spend.md  top-products-sales.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
personas/: default.md  formal.md  punchy.md
src/retail_agent/: bq.py  (+18 more)
tests/: conftest.py  helpers.py  test_bq_runner.py  test_cli.py  test_config.py  test_eval_assertions.py  test_eval_baseline.py  test_eval_fakes.py  test_eval_judge.py  test_eval_runner.py  test_golden.py  test_golden_graph.py  test_graph.py  test_llm.py  test_mcp_server.py  test_metrics.py  test_observability.py  test_personas.py  test_preferences_graph.py  test_preferences_store.py  test_reports_graph.py  test_reports_store.py  test_safety.py  test_safety_graph.py  test_sql_guard.py  test_sql_utils.py  test_trace_cli.py
(+174 files in other folders)
