[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-agent"
version = "0.23.0"
description = "Retail company data analysis chat assistant (Opsfleet AI assignment prototype)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Opsfleet Assignment" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "google-cloud-bigquery>=3.13.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain_core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "db-dtypes==1.2.0",
    "sqlglot>=25.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
mcp = [
    "mcp>=1.28.0",
]

[project.scripts]
retail-agent = "retail_agent.cli:main"
retail-agent-mcp = "retail_agent.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
retail_agent = ["assets/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore:The 'generic' unit for NumPy timedelta is deprecated:DeprecationWarning:db_dtypes.core",
]
